# ObjectMeasurement3D

./: CMakeLists.txt
data/: hand.ply
src/: ObjectMeasurement3D.cpp
